@@ -100,6 +100,8 @@ BA  77- my(a,b); parvector(1,i,self()) --> SEGV
 AP  78- bnrclassfield(,,2) --> sometimes relative polynomial
 AP  79- nfgrunwaldwang could modify its arguments
     80- ldata_vecan(an, N, prec): make sure the function returns N coefficients
+    81- T=Pol([1,0,6748,-750056,45535504,-2530688944,140646000784]);
+        bnfinit(T,1).cyc -> [240, 12, 4, 2, 2, 2] (instead of [120, 4, 4, 2])
 
   Changed
      1- [libpari] rename rootsof1 -> nfrootsof1
